entidades y servicios de Turnos 2